--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="site-bg">
+  <!-- tsParticles animated background (interactive) -->
+<div id="tsparticles" aria-hidden="true"></div>
+
   <!-- top skip link for accessibility -->
   <a class="skip-link" href="#content">Skip to content</a>
 
@@ -63,8 +66,60 @@
   </div>
 
   <!-- JS -->
+   <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.9.3/tsparticles.bundle.min.js"></script>
   <script src="js/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+  // call after DOM loaded (or place inside your initInteractions)
+  window.addEventListener('DOMContentLoaded', () => {
+    if (window.tsParticles) {
+      tsParticles.load("tsparticles", {
+        fullScreen: { enable: false }, // we use the div; not full-screen canvas
+        detectRetina: true,
+        fpsLimit: 60,
+        particles: {
+          number: { value: 70, density: { enable: true, area: 800 } },
+          color: { value: ["#06b6d4", "#7c3aed", "#22c1ff"] },
+          shape: { type: "circle" },
+          opacity: {
+            value: 0.7,
+            random: { enable: true, minimumValue: 0.2 },
+          },
+          size: { value: { min: 1, max: 4 }, random: true },
+          links: {
+            enable: true,
+            distance: 140,
+            color: "#06b6d4",
+            opacity: 0.12,
+            width: 1
+          },
+          move: {
+            enable: true,
+            speed: 0.9,
+            direction: "none",
+            random: true,
+            outModes: { default: "out" }
+          }
+        },
+        interactivity: {
+          detectsOn: "canvas",
+          events: {
+            onHover: { enable: true, mode: "repulse" },
+            onClick: { enable: true, mode: "push" },
+            resize: true
+          },
+          modes: {
+            repulse: { distance: 100, duration: 0.6 },
+            push: { quantity: 4 }
+          }
+        },
+        background: { color: "transparent" }
+      });
+    }
+  });
+</script>
+
+
 </body>
 </html>
 
